jumped the gun on https

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ description: >-
   The 1st Annual Science Understanding through Data Science (SUDS) Conference
   and Workshop.
 baseurl: ""
-url: "https://sudsconf.com"
+url: "http://sudsconf.com"
 twitter_username: 
 github_username: jplmlia
